tests/errors/compiler/no_leftbr_in_getid/getid_rus.c
void main()
{
	int a;
	ЧИТАТЬИД(a;
}
